# fishingboatColWarning

./: .gitignore  CMakeLists.txt  Makefile  README.md  run_viz.sh
cmake/: aarch64-linux-gnu.cmake
core/: CMakeLists.txt
core/ais/: myaisdecoder.cpp  myaisdecoder.h
core/collision/: colwarning.cpp  colwarning.h
data/: AISMSG.txt
pi_app/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_ais_decoder.cpp  test_colwarning.cpp
visualization/: CMakeLists.txt  aislistmodel.cpp  aislistmodel.h  aisreader.cpp  aisreader.h  controlpanel.cpp  controlpanel.h  main.cpp  mainwindow.cpp  mainwindow.h
visualization/resources/: map.html
